--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,5 @@ git+git://github.com/dpriskorn/cache_to_disk@ea25ce4ae74ca14cc14dd2542f2824aee75
 langdetect~=1.0.9
 pandas~=1.3.5
 git+git://github.com/LeMyst/WikibaseIntegrator@v0.12.0rc1#egg=wikibaseintegrator
+pydantic
+click
