--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "swepub2python"
 version = "0.1.0"
 description = "extract SwePub into Python objects to work on the data using Pandas"
-authors = ["Your Name <you@example.com>"]
+authors = ["Dennis Priskorn <you@example.com>"]
 license = "GPLv3+"
 readme = "README.md"
 
@@ -15,7 +15,8 @@ langdetect = "^1.0.9"
 wikibaseintegrator = "^0.12.5"
 cache_to_disk = { git="https://github.com/dpriskorn/cache_to_disk", rev="ea25ce4ae74ca14cc14dd2542f2824aee7566281"}
 
-
+[tool.poetry.group.dev.dependencies]
+black = "^24.1.1"
 
 [build-system]
 requires = ["poetry-core"]
